<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="next_button">Next</string>

    //added since chapter 1
    <string name="correct_count">correct count # </string> // displays the count of correct answers
    <string name="incorrect_count">Incorrect count # </string> //displays the count of incorrect answers
    //questions
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>

    <string name="landscape_orientation">Your orientation is now landscape.</string> <!-- alerts the user when the orientation is landscape-->
    <string name="portrait_orientation">Your orientation is now portrait.</string> <!-- alerts the user when the orientation is portrait-->
</resources>